--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -69,10 +69,11 @@ footer{
 }
 footer a{
    text-decoration: none;
-   color: white;
+   color: rgb(0, 0, 0);
    margin-left: auto;
    vertical-align: center;
    text-align: center;
+   font-weight: bolder;
 }
 table {
    color: #070707 ;
